--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,10 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.multi-gradient-bg {
+  background-color: #ffffff;
+  background-image: 
+    radial-gradient(at 10% 20%, rgb(216, 230, 230) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 20% 30%, rgb(255, 198, 255) 0%, rgba(255, 255, 255, 0) 90%),
+    radial-gradient(at 40% 50%, rgba(231, 239, 255, 0.89) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 60% 70%, rgba(126, 169, 255, 0.849) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 70% 80%, rgba(68, 85, 243, 0.863) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 80% 90%, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 70%);
 }
