--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --background: #1d1f2a;
+  --foreground: #ffffff;
+  --darkpurple: #6a51e1;
+  --purple: #886fff;
+  --lightpurple: #be80ff;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-darkpurple: var(--darkpurple);
+  --color-purple: var(--purple);
+  --color-lightpurple: var(--lightpurple);
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: Urbanist, sans-serif;
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.multi-gradient-bg {
+  background-color: #ffffff;
+  background-image: 
+    radial-gradient(at 10% 20%, rgb(216, 230, 230) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 20% 30%, rgb(255, 198, 255) 0%, rgba(255, 255, 255, 0) 90%),
+    radial-gradient(at 40% 50%, rgba(231, 239, 255, 0.89) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 60% 70%, rgba(126, 169, 255, 0.849) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 70% 80%, rgba(68, 85, 243, 0.863) 0%, rgba(255, 255, 255, 0) 70%),
+    radial-gradient(at 80% 90%, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 70%);
 }
